--- a/tests/test_cases/2008/commands/7B0.7B8.211F.yaml
+++ b/tests/test_cases/2008/commands/7B0.7B8.211F.yaml
@@ -5,6 +5,10 @@ test_cases:
     TOYOTA_STOP_LIGHT_SW: 0
   response: 7B803611F00
 - expected_values:
+    TOYOTA_PARKING_BRAKE_SW: 1
+    TOYOTA_STOP_LIGHT_SW: 0
+  response: 7B803611F40
+- expected_values:
     TOYOTA_PARKING_BRAKE_SW: 0
     TOYOTA_STOP_LIGHT_SW: 1
   response: 7B803611F80
